osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_strings/test_string_slice_validation[Result = StringSlice(s='abcdef', start=-1, end=3)].txt
error: invalid `start`
--> main.sml:1:40
     |
   1 | Result = StringSlice(s="abcdef", start=-1, end=3)
     |                                         ^ `start` must be a non-negative integer